--- a/nextflow.config
+++ b/nextflow.config
@@ -8,10 +8,12 @@ docker {
 process {
   withName: QC_AND_FILTER_NORMALISE {
   //container = 'kevinr9525/rocker-rstudio-seurat-5:dev'
-  container = 'kevinr9525/rocker-rstudio-seurat-5:doublet'
+  //container = 'kevinr9525/rocker-rstudio-seurat-5:doublet'
+  container = 'kevinr9525/rocker-tidyverse-4.5-bioconductor-seurat:dev'
   }
   withName: INTEGRATE {
   //container = 'kevinr9525/rocker-rstudio-seurat-5:dev'
-  container = 'kevinr9525/rocker-rstudio-seurat-5:doublet'
+  //container = 'kevinr9525/rocker-rstudio-seurat-5:doublet'
+  container = 'kevinr9525/rocker-tidyverse-4.5-bioconductor-seurat:dev'
   }
 }
