--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,14 @@
 docker {
   //cacheDir = "/home/kryan/singularity_cache"
   //autoMount = 'true'
-  enabled = 'true'
+  enabled = 'false'
 
+}
+
+singularity {
+  cacheDir = "/data/containers/"
+  autoMount = 'true'
+  enabled = 'true'
 }
 
 process {
